--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "project1",
   "version": "0.1.0",
+  "homepage": "https://shri214.github.io/crypto-dashboard",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -25,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
